# django_app_food

./: pyproject.toml
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
core/: pagination.py
recipe/: models.py  serializers.py  views.py
recipe/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_options.py
